--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Frontend Mentor | Stats preview card component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="dist/css/main.css" />
   </head>
   <body>
     <div class="full">
